tests/ui/attributes/extented-attribute-macro-error.stderr
error: couldn't read the file
  --> $DIR/extented-attribute-macro-error.rs:3:10
   |
LL | #![doc = include_str!("../not_existing_file.md")]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `include_str!`

error: aborting due to previous error

